@startuml

title __CHESS's Class Diagram__\n

  namespace fr.rphstudio.chess.game {
    class fr.rphstudio.chess.game.Board {
    }
  }
  

  namespace fr.rphstudio.chess.game {
    class fr.rphstudio.chess.game.ChessModel {
    }
  }
  

  namespace fr.rphstudio.chess.game {
    class fr.rphstudio.chess.game.OneMove {
    }
  }
  

  namespace fr.rphstudio.chess.game {
    class fr.rphstudio.chess.game.Piece {
    }
  }
  

  namespace fr.rphstudio.chess.game {
    class fr.rphstudio.chess.game.RemovedPieces {
    }
  }
  

  namespace fr.rphstudio.chess.game {
    class fr.rphstudio.chess.game.TimerSet {
    }
  }
  

  namespace fr.rphstudio.chess.game {
    namespace piece {
      class fr.rphstudio.chess.game.piece.BishopMove {
      }
    }
  }
  

  namespace fr.rphstudio.chess.game {
    namespace piece {
      class fr.rphstudio.chess.game.piece.KingMove {
      }
    }
  }
  

  namespace fr.rphstudio.chess.game {
    namespace piece {
      class fr.rphstudio.chess.game.piece.KnightMove {
      }
    }
  }
  

  namespace fr.rphstudio.chess.game {
    namespace piece {
      class fr.rphstudio.chess.game.piece.PawnMove {
      }
    }
  }
  

  namespace fr.rphstudio.chess.game {
    namespace piece {
      class fr.rphstudio.chess.game.piece.QueenMove {
      }
    }
  }
  

  namespace fr.rphstudio.chess.game {
    namespace piece {
      class fr.rphstudio.chess.game.piece.RookMove {
      }
    }
  }
  

  namespace fr.rphstudio.chess.interf {
    class fr.rphstudio.chess.interf.ChessException {
    }
  }
  

  namespace fr.rphstudio.chess.interf {
    class fr.rphstudio.chess.interf.EmptyCellException {
    }
  }
  

  namespace fr.rphstudio.chess.interf {
    interface fr.rphstudio.chess.interf.IChess {
    }
  }
  

  namespace fr.rphstudio.chess.interf {
    interface fr.rphstudio.chess.interf.IMove {
    }
  }
  

  namespace fr.rphstudio.chess.interf {
    class fr.rphstudio.chess.interf.OutOfBoardException {
    }
  }
  

  namespace fr.rphstudio.chess.launcher {
    class fr.rphstudio.chess.launcher.ChessFontManager {
    }
  }
  

  namespace fr.rphstudio.chess.launcher {
    class fr.rphstudio.chess.launcher.ChessGameController {
    }
  }
  

  namespace fr.rphstudio.chess.launcher {
    class fr.rphstudio.chess.launcher.MainLauncher {
    }
  }
  

  fr.rphstudio.chess.game.ChessModel .up.|> fr.rphstudio.chess.interf.IChess
  fr.rphstudio.chess.game.ChessModel o-- fr.rphstudio.chess.game.Board : chessBoard
  fr.rphstudio.chess.game.ChessModel o-- fr.rphstudio.chess.game.TimerSet : timerB
  fr.rphstudio.chess.game.ChessModel o-- fr.rphstudio.chess.game.TimerSet : timerW
  fr.rphstudio.chess.game.OneMove o-- fr.rphstudio.chess.interf.IChess.ChessPosition : newPos
  fr.rphstudio.chess.game.OneMove o-- fr.rphstudio.chess.interf.IChess.ChessPosition : oldRookPos
  fr.rphstudio.chess.game.OneMove o-- fr.rphstudio.chess.game.Piece : pieceEaten
  fr.rphstudio.chess.game.OneMove o-- fr.rphstudio.chess.interf.IChess.ChessPosition : pieceEatenPos
  fr.rphstudio.chess.game.OneMove o-- fr.rphstudio.chess.game.Piece : pieceMoved
  fr.rphstudio.chess.game.OneMove o-- fr.rphstudio.chess.interf.IChess.ChessPosition : pieceMovedPos
  fr.rphstudio.chess.game.Piece o-- fr.rphstudio.chess.interf.IChess.ChessColor : chessColor
  fr.rphstudio.chess.game.Piece o-- fr.rphstudio.chess.interf.IChess.ChessType : chessType
  fr.rphstudio.chess.game.Piece o-- fr.rphstudio.chess.interf.IMove : pieceMove
  fr.rphstudio.chess.game.RemovedPieces o-- fr.rphstudio.chess.interf.IChess.ChessType : type
  fr.rphstudio.chess.game.piece.BishopMove .up.|> fr.rphstudio.chess.interf.IMove
  fr.rphstudio.chess.game.piece.KingMove .up.|> fr.rphstudio.chess.interf.IMove
  fr.rphstudio.chess.game.piece.KnightMove .up.|> fr.rphstudio.chess.interf.IMove
  fr.rphstudio.chess.game.piece.PawnMove .up.|> fr.rphstudio.chess.interf.IMove
  fr.rphstudio.chess.game.piece.QueenMove .up.|> fr.rphstudio.chess.interf.IMove
  fr.rphstudio.chess.game.piece.RookMove .up.|> fr.rphstudio.chess.interf.IMove
  fr.rphstudio.chess.interf.EmptyCellException -up-|> fr.rphstudio.chess.interf.ChessException
  fr.rphstudio.chess.interf.OutOfBoardException -up-|> fr.rphstudio.chess.interf.ChessException
  fr.rphstudio.chess.launcher.ChessGameController -up-|> org.newdawn.slick.state.BasicGameState
  fr.rphstudio.chess.launcher.ChessGameController o-- fr.rphstudio.chess.interf.IChess : board
  fr.rphstudio.chess.launcher.ChessGameController o-- fr.rphstudio.chess.launcher.ChessFontManager : chessFont
  fr.rphstudio.chess.launcher.ChessGameController o-- fr.rphstudio.chess.interf.IChess.ChessColor : currentColor
  fr.rphstudio.chess.launcher.ChessGameController o-- fr.rphstudio.chess.interf.IChess.ChessPosition : selectPos
  fr.rphstudio.chess.launcher.MainLauncher -up-|> org.newdawn.slick.state.StateBasedGame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
